frontend now geths the container ip on startup

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,6 @@ FROM rust:latest
 RUN mkdir -p /home/app/src
 
 
-
 #copy only needed files
 COPY ./src /home/app/src
 COPY ./Cargo.toml /home/app
@@ -11,18 +10,21 @@ COPY ./Cargo.lock /home/app
 COPY ./rust-toolchain.toml /home/app
 COPY ./index.html /home/app
 COPY ./trunk.toml /home/app
+COPY ./container_start_script.sh /home/app
 
 #install the nightly tool chain and wasm target
 RUN rustup toolchain install nightly
 RUN rustup target add wasm32-unknown-unknown --toolchain nightly
-
 
 #install trunk
 RUN cargo install --locked trunk
 
 WORKDIR /home/app/
 
+#custom start script for the container
+#this is done so we can properly set the ip
+RUN chmod +x ./container_start_script.sh
+
 EXPOSE 8080
 
-#currently the ip is set manually in the trunk . toml file. and will not work if you have multiple containers running
-CMD ["trunk", "--config", "trunk.toml", "serve"]
+CMD ["./container_start_script.sh"]
