added development helpers for docker backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,9 @@
 FROM golang:latest
 
 RUN mkdir -p /home/app
+#Compilation daemon. this helps with development in docker
+RUN go install github.com/githubnemo/CompileDaemon@latest
+RUN mv /go/bin/CompileDaemon /usr/bin
 
 COPY . /home/app
 
@@ -8,4 +11,5 @@ WORKDIR /home/app/
 
 EXPOSE 3000
 
-CMD ["go", "run", "."]
+#CMD ["go", "run", "." ]
+CMD ["CompileDaemon", "-command=./main" ]
