the frontend now proxies to the bakcend so when you download stuff it does not show the backend ip on the url

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - 8080:8080
     volumes:
       - ./frontend:/home/app
+    environment:
+      BACKENDIP: back
 
   back:
     build: ./backend
